domain/libthreema/macros/tests/fail/02-not-u8.stderr
error[E0308]: mismatched types
 --> tests/fail/02-not-u8.rs:7:48
  |
7 |     let _result: [u8; 4] = concat_fixed_bytes!(b); // b is a u16 array
  |                                                ^ expected `[u8; _]`, found `[u16; 2]`
  |
  = note: expected array `[u8; _]`
             found array `[u16; 2]`

error[E0308]: mismatched types
 --> tests/fail/02-not-u8.rs:8:51
  |
8 |     let _result: [u8; 8] = concat_fixed_bytes!(a, b); // b is a u16 array
  |                                                   ^ expected `[u8; _]`, found `[u16; 2]`
  |
  = note: expected array `[u8; _]`
             found array `[u16; 2]`
